--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <!-- Favicon -->
     <link rel="icon" href="res/favicon.svg">
-    <title>Todo List | By Abdellatif Laghjaj</title>
+    <title>Todo List | By Vivek Kumar</title>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
     <div class="author-text">
         <p>Made with ❤️
             by <a href="https://github.com/abdellatif-laghjaj" target="_blank">
-                <b>Abdellatif Laghjaj</b>
+                <b>Vivek Kumar</b>
             </a>
         </p>
     </div>
