--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 </head>
 <body>
 
-    <!-- Copyright -->
     <div class="author-text">
         <p>Made with ❤️
-            by <a href="https://github.com/abdellatif-laghjaj" target="_blank">
+            by <a href="https://github.com/vivek3125" target="_blank">
                 <b>Vivek Kumar</b>
             </a>
         </p>
@@ -43,14 +42,6 @@
         </header>
 
         <div class="todos-filter">
-            <!-- <div class="dropdown">
-                <label tabindex="0" class="btn m-1">Filter</label>
-                <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
-                    <li><a>All</a></li>
-                    <li><a>Pending</a></li>
-                    <li><a>Completed</a></li>
-                </ul>
-            </div> -->
 
             <button class="btn btn-secondary delete-all-btn">
                 Delete All
